[gd_scene load_steps=4 format=3 uid="uid://d1yuqwj2pnio5"]

[ext_resource type="Texture2D" uid="uid://sml5bdmbeblw" path="res://icon.svg" id="1_3qpp6"]
[ext_resource type="Script" path="res://player.gd" id="1_6oqx0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ggx1p"]
size = Vector2(128, 128)

[node name="Player" type="RigidBody2D"]
collision_layer = 2
collision_mask = 9
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 2
script = ExtResource("1_6oqx0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_3qpp6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ggx1p")

[node name="ShootingCooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ShootingCooldownTimer" to="." method="_on_shooting_cooldown_timer_timeout"]
